use transparent value for selected line avoids spell check from being covered up

--- a/styles/editor.less
+++ b/styles/editor.less
@@ -61,7 +61,7 @@ atom-text-editor, :host {
 
   .line-number.cursor-line-no-selection,
   .line.cursor-line {
-    background-color: mix(@base0D, @base07, 10%);
+    background-color: fadeout(@base0D, 92%); // not too bright to be confused with base07
   }
 
   .bracket-matcher .region {
